<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView android:id="@+id/header_name"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name" />
    <TextView android:id="@+id/name"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name" />
    <TextView android:id="@+id/header_recordDate"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/recordDate" />
    <TextView android:id="@+id/recordDate"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/recordDate" />
    <TextView android:id="@+id/header_neck"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/neck" />
    <TextView android:id="@+id/neck"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/neck" />
    <TextView android:id="@+id/header_bust"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bust" />
    <TextView android:id="@+id/bust"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bust" />
    <TextView android:id="@+id/header_chest"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/chest" />
    <TextView android:id="@+id/chest"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/chest" />
    <TextView android:id="@+id/header_waist"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/waist" />
    <TextView android:id="@+id/waist"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/waist" />
    <TextView android:id="@+id/header_hip"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hip" />
    <TextView android:id="@+id/hip"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hip" />
    <TextView android:id="@+id/header_inseam"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inseam" />
    <TextView android:id="@+id/inseam"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inseam" />
    <TextView android:id="@+id/header_comment"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comment" />
    <TextView android:id="@+id/comment"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comment" />
    <Button
        android:id="@+id/button_finish_viewing_record"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_finish_viewing_record"
        android:onClick="finishViewingRecord" />

</LinearLayout>
